...
            android:tint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_search_black_24dp"/>

        <EditText
            android:id="@+id/address_search_inp_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:hint="@string/estimate_destination_hint"
...
        android:elevation="6dp"
        android:indeterminateOnly="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/address_search_card_destination"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/address_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:items="@{viewModel.predictions}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_search_card_destination"
...
